[project]
name = "dagster-pipelines"
version = "0.1.0"
description = "builder.love data orchestration"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-postgres",
    "dagster-dbt",
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "gcsfs",
    "google-cloud-storage",
    "toml",
    "dagster-gcp",
    "dagster-k8s"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster-pipelines.definitions"
project_name = "dagster-pipelines"

[tool.setuptools.packages.find]
exclude=["dagster_pipelines_tests"]
