[project]
name = "dagster_pipelines"
version = "0.1.0"
description = "builder.love data orchestration"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_pipelines.definitions"
project_name = "dagster_pipelines"

[tool.setuptools.packages.find]
exclude=["dagster_pipelines_tests"]
